examples/test/testpolicy14632.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14632
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key24: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value31
          key49: value2
          key29: value40
      podSelector:
        matchLabels:
          key9: value15
          key24: value14
